<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.onemfive</groupId>
	<artifactId>sensors</artifactId>
	<version>0.6.2</version>

	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
	</properties>

	<name>1m5-sensors</name>
	<url>https://1m5.io</url>
	<description>Invisible Matrix Services - Sensors Library</description>
	<inceptionYear>2017</inceptionYear>
	<licenses>
		<license>
			<name>Unlicense</name>
			<url>https://unlicense.org/</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>objectorange</name>
			<email>objectorange@1m5.i2p</email>
		</developer>
	</developers>
	<scm>
		<connection>scm:git@github.com/1m5/1m5-sensors</connection>
		<developerConnection>scm:git@github.com/1m5/1m5-sensors</developerConnection>
		<url>git@github.com/1m5/1m5-sensors</url>
	</scm>

	<profiles>
		<profile>
			<id>devnet</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<!-- Seeds in format network|address comma-delimited -->
				<onemfive.sensors.seeds></onemfive.sensors.seeds>
				<!-- Banned in format network|address comma-delimited -->
				<onemfive.sensors.banned></onemfive.sensors.banned>
				<!-- Clean out Graph DB on restart -->
				<onemfive.sensors.db.cleanOnRestart>true</onemfive.sensors.db.cleanOnRestart>
				<!-- Min Peers Tracked - the point at which Discovery process goes into 'hyper' mode. -->
				<onemfive.sensors.MinPT>5</onemfive.sensors.MinPT>
				<!-- Max Peers Tracked - the total number of Peers to attempt to maintain knowledge of -->
				<onemfive.sensors.MaxPT>10</onemfive.sensors.MaxPT>
				<!-- Max Peers Sent - Maximum number of peers to send in a peer list (the bigger a datagram, the less chance of it getting through). -->
				<onemfive.sensors.MaxPS>5</onemfive.sensors.MaxPS>
				<!-- Max Acknowledgments Tracked -->
				<onemfive.sensors.MaxAT>20</onemfive.sensors.MaxAT>
				<!-- Update Interval - seconds between Discovery process -->
				<onemfive.sensors.UI>60</onemfive.sensors.UI>
				<!-- Reliable Peer Min Acks -->
				<onemfive.sensors.MinAckRP>5</onemfive.sensors.MinAckRP>
				<!-- Super Reliable Peer Min Acks -->
				<onemfive.sensors.MinAckSRP>200</onemfive.sensors.MinAckSRP>
			</properties>
		</profile>
		<profile>
			<id>testnet</id>
			<properties>
				<!-- Seeds in format network|address comma-delimited -->
				<onemfive.sensors.seeds></onemfive.sensors.seeds>
				<!-- Banned in format network|address comma-delimited -->
				<onemfive.sensors.banned></onemfive.sensors.banned>
				<!-- Clean out Graph DB on restart -->
				<onemfive.sensors.db.cleanOnRestart>false</onemfive.sensors.db.cleanOnRestart>
				<!-- Min Peers Tracked - the point at which Discovery process goes into 'hyper' mode. -->
				<onemfive.sensors.MinPT>10</onemfive.sensors.MinPT>
				<!-- Max Peers Tracked - the total number of Peers to attempt to maintain knowledge of -->
				<onemfive.sensors.MaxPT>100</onemfive.sensors.MaxPT>
				<!-- Max Peers Sent - Maximum number of peers to send in a peer list (the bigger a datagram, the less chance of it getting through). -->
				<onemfive.sensors.MaxPS>5</onemfive.sensors.MaxPS>
				<!-- Max Acknowledgments Tracked -->
				<onemfive.sensors.MaxAT>50</onemfive.sensors.MaxAT>
				<!-- Update Interval - seconds between Discovery process -->
				<onemfive.sensors.UI>60</onemfive.sensors.UI>
				<!-- Reliable Peer Min Acks -->
				<onemfive.sensors.MinAckRP>20</onemfive.sensors.MinAckRP>
				<!-- Super Reliable Peer Min Acks -->
				<onemfive.sensors.MinAckSRP>10000</onemfive.sensors.MinAckSRP>
			</properties>
		</profile>
		<profile>
			<id>mainnet</id>
			<properties>
				<!-- Seeds in format network|address comma-delimited -->
				<onemfive.sensors.seeds></onemfive.sensors.seeds>
				<!-- Banned in format network|address comma-delimited -->
				<onemfive.sensors.banned>false</onemfive.sensors.banned>
				<!-- Clean out Graph DB on restart -->
				<onemfive.sensors.db.cleanOnRestart>false</onemfive.sensors.db.cleanOnRestart>
				<!-- Min Peers Tracked - the point at which Discovery process goes into 'hyper' mode. -->
				<onemfive.sensors.MinPT>10</onemfive.sensors.MinPT>
				<!-- Max Peers Tracked - the total number of Peers to attempt to maintain knowledge of -->
				<onemfive.sensors.MaxPT>100</onemfive.sensors.MaxPT>
				<!-- Max Peers Sent - Maximum number of peers to send in a peer list (the bigger a datagram, the less chance of it getting through). -->
				<onemfive.sensors.MaxPS>5</onemfive.sensors.MaxPS>
				<!-- Max Acknowledgments Tracked -->
				<onemfive.sensors.MaxAT>50</onemfive.sensors.MaxAT>
				<!-- Update Interval - seconds between Discovery process -->
				<onemfive.sensors.UI>60</onemfive.sensors.UI>
				<!-- Reliable Peer Min Acks -->
				<onemfive.sensors.MinAckRP>20</onemfive.sensors.MinAckRP>
				<!-- Super Reliable Peer Min Acks -->
				<onemfive.sensors.MinAckSRP>10000</onemfive.sensors.MinAckSRP>
			</properties>
		</profile>
		<profile>
			<id>seed</id>
			<!-- Seed peers are set up to get newcomers onto the network quickly.-->
			<properties>
				<!-- Seeds in format network|address comma-delimited -->
				<onemfive.sensors.seeds></onemfive.sensors.seeds>
				<!-- Banned in format network|address comma-delimited -->
				<onemfive.sensors.banned></onemfive.sensors.banned>
				<!-- Clean out Graph DB on restart -->
				<onemfive.sensors.db.cleanOnRestart>false</onemfive.sensors.db.cleanOnRestart>
				<!-- Min Peers Tracked - the point at which Discovery process goes into 'hyper' mode. -->
				<onemfive.sensors.MinPT>10</onemfive.sensors.MinPT>
				<!-- Max Peers Tracked - the total number of Peers to attempt to maintain knowledge of -->
				<onemfive.sensors.MaxPT>10000</onemfive.sensors.MaxPT>
				<!-- Max Peers Sent - Maximum number of peers to send in a peer list (the bigger a datagram, the less chance of it getting through). -->
				<onemfive.sensors.MaxPS>5</onemfive.sensors.MaxPS>
				<!-- Max Acknowledgments Tracked -->
				<onemfive.sensors.MaxAT>100</onemfive.sensors.MaxAT>
				<!-- Update Interval - seconds between Discovery process -->
				<onemfive.sensors.UI>60</onemfive.sensors.UI>
				<!-- Reliable Peer Min Acks -->
				<onemfive.sensors.MinAckRP>100</onemfive.sensors.MinAckRP>
				<!-- Super Reliable Peer Min Acks -->
				<onemfive.sensors.MinAckSRP>100000</onemfive.sensors.MinAckSRP>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>io.onemfive</groupId>
			<artifactId>core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.onemfive</groupId>
			<artifactId>did</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>io.onemfive</groupId>
			<artifactId>neo4j</artifactId>
			<version>${project.version}</version>
		</dependency>
		<!-- Test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<finalName>${project.name}-${project.version}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.config</include>
				</includes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<!--<plugin>-->
					<!--<groupId>org.apache.maven.plugins</groupId>-->
					<!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
					<!--<version>2.8.1</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<groupId>org.apache.maven.plugins</groupId>-->
					<!--<artifactId>maven-assembly-plugin</artifactId>-->
					<!--<version>2.5.5</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-antrun-plugin</artifactId>-->
					<!--<version>1.8</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-dependency-plugin</artifactId>-->
					<!--<version>2.10</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-release-plugin</artifactId>-->
					<!--<version>2.5.2</version>-->
				<!--</plugin>-->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.3</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<!--<plugin>-->
				<!--<artifactId>maven-assembly-plugin</artifactId>-->
				<!--<executions>-->
					<!--<execution>-->
						<!--<phase>package</phase>-->
						<!--<goals>-->
							<!--<goal>single</goal>-->
						<!--</goals>-->
					<!--</execution>-->
				<!--</executions>-->
				<!--<configuration>-->
					<!--<archive>-->
						<!--<manifest>-->
							<!--<mainClass>io.onemfive.core.OneMFiveStandaloneLauncher</mainClass>-->
						<!--</manifest>-->
					<!--</archive>-->
					<!--<descriptorRefs>-->
						<!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
					<!--</descriptorRefs>-->
				<!--</configuration>-->
			<!--</plugin>-->
			<!--<plugin>-->
				<!--<groupId>org.apache.maven.plugins</groupId>-->
				<!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
			<!--</plugin>-->
		</plugins>
	</build>

	<!--<reporting>-->
		<!--<plugins>-->
			<!--<plugin>-->
				<!--<groupId>org.apache.maven.plugins</groupId>-->
				<!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
				<!--<version>2.8.1</version>-->
				<!--<reportSets>-->
					<!--<reportSet>-->
						<!--<reports>-->
							<!--<report>dependencies</report>-->
							<!--<report>project-team</report>-->
							<!--&lt;!&ndash;<report>mailing-list</report> &ndash;&gt;-->
							<!--&lt;!&ndash;<report>cim</report> &ndash;&gt;-->
							<!--&lt;!&ndash;<report>issue-tracking</report> &ndash;&gt;-->
							<!--<report>license</report>-->
							<!--<report>scm</report>-->
						<!--</reports>-->
					<!--</reportSet>-->
				<!--</reportSets>-->
			<!--</plugin>-->
		<!--</plugins>-->
	<!--</reporting>-->

</project>
